card width issue on mobile changed

--- a/website/projects/scimaps/src/app/pages/home/home.component.scss
+++ b/website/projects/scimaps/src/app/pages/home/home.component.scss
@@ -15,6 +15,9 @@ $desktop: 1248px;
     bottom: 0;
     right: 0;
     z-index: 1;
+    @include screen.breakpoint(mobile) {
+      width: 100%;
+    }
   }
 
   .logo {
